web/skins/modern/resources/css/cat-user.css
:root {
    --color1: #FFFFFF;
    --color2: #575757;
    --color3: #1d4a74;
}

html {
    height: 100%;
}

body {
    background: var(--color1); 
    color: #000000;
    font-family:"Open Sans", Helvetica, sans-serif;
    font-size:12px;
    font-weight: normal;
    height: 100%;
    min-height: 100%;
    margin: 0px;
    padding: 0px;
    padding-left: 0px;
    position: relative;
}
button[disabled] {
    background: #bababa;
    color: #6a6a6a;
    border-left-style: inset;
    border-left-width: 1px;
    border-left-color: #dadada;
    border-top-style: inset;
    border-top-width: 1px;
    border-top-color: #dadada;
    border-right-style: outset;
    border-right-width: 2px;
    border-right-color: #dadada;
    border-bottom-style: outset;
    border-bottom-width: 2px;
    border-bottom-color: #dadada;
    cursor: default;
}

.use_borders button {
    border-left-style: none; 
    border-left-width: 1px; 
    border-left-color: #8bbacb;
    border-top-style: outset; 
    border-top-width: 1px; 
    border-top-color: #8bbacb;
    border-right-style: outset; 
    border-right-width: 2px; 
    border-right-color: #043d52;
    border-bottom-style: outset; 
    border-bottom-width: 2px; 
    border-bottom-color: #043d52;
}

input {
    margin-right: 5px;
}

input[button] {
    background: var(--color1);
}

select {
    vertical-align: middle;
    margin-left: 10px;
}

a:link {
    color: var(--color2);
}

a:visited {
    color: var(--color2);
}

a:hover {
    color:#043d52;
}

a:active {
    color: var(--color2);
}

#wrap {
    min-height: 100%;
    max-width: 1200px;
    background: white;
    margin: auto;
  /*  height: 100%;
  padding-bottom: 80px;*/
}

#cat_form {
    height: 100%;
    padding-bottom: 80px; 
}

#heading {
   position: relative;
}

#main_page {
   position: relative;
   height: 100%;
   width: 100%;
}

#front_page {
    position: relative;
    width: 100%;
    height:auto;
}

button {
    cursor: pointer;
    background: var(--color2); 
    color: #FFFFFF; 
    height: 23px;
}

button.pressed {
    background:#095e80;
}

#device_list button.pressedDisabled {
    background:#f00;
}

button.delete {
    background: maroon;
}

#devices {
    z-index:80;
    padding-left: 30px;
    font-size: 11px;
    font-weight: normal;
    position: relative;
    display: none;
}

#device_list button {
   min-height: 23px;
   color: white;
    background:  var(--color3);
}

#device_list button.more_info_b {
    width: 23px; 
   font-style: italic;
   font-family: "Times New Roman", Times, serif;
   font-size: 18px;
   text-align: center;
   padding-bottom: 8px;
}

#device_list button.disabledDevice {
    color: #444;
    background: #bbb;
}

.device_list button {
    width: 25em; 
    font-size: 14px;  
    font-weight: normal; 
    font-style: normal;
}

.device_list .vendor {
    background: #aaa; 
    padding: 4px;
    border-style: solid; 
    border-width: 0px; 
    border-color: #fff;
    border-bottom-width:1px;
    border-top-width:1px;
    width: 50px;
    text-align: center;
    vertical-align: middle;
}

.no_borders .device_list td {
    padding-top: 2px;
    margin-top: 2px;
}

.device_list {
    list-style-type: none;
}

.device_list td {
    vertical-align:middle;
}

td.vendor {
    width: 50px;
    text-align: center;
    vertical-align: middle;
}

td.vendor img {
    height: 40px;
}

#roller {
    position: relative;
    padding-top: 140px;
    height:272px;
}

#slides {
    position: absolute;
    left: 0px;
    height:272px;
    background: var(--color3);
    background-image: url("../images//image_5a.jpg");
    background-size: 100%;
    background-repeat: no-repeat;
    width: 100%;
}

#slides img {
    position: absolute;
    top: 100px;
    right: 60px;
}

#img_roll {
    position: absolute;
    right: 50px;
    top: 90px;
}

#img_roll  img {
    position: absolute;
    right: 0px;
    top: 70px;
}

.img.img_roll {
    z-index: 90;
}

#user_button {
    display: block;
    width: 50vw;
    max-width: 600px;
}

#user_button_td {
    text-align:center;
    vertical-align:top;
    padding-bottom: 20px;
    padding-top: 50px;
    position: relative;
    height: auto;
}

#signin {
    padding-left: 30px;
    padding-top: 10px;
}

#top_invite {
    clear: both;
    color: #575757;
    font-weight: bold;
    font-size: 30px;
    padding-top: 20px;
    padding-bottom: 25px;
    text-align: center;
    width: 100%;
    min-height: 50px;
    cursor: auto;
    text-decoration: none;
}

#welcome_top1 {
    clear: both;
//    padding-top: 140px;
    padding-top: 30px;
    font-weight: bold;
    font-size: 20px;
    text-align: center;
}

#welcome_top2 {
   font-weight: bold;
    font-size: 16px;
    text-align: center;
   display: none;
}

#cat_logo {
   width: 180px;
   position:absolute;
   left:0px;
   top:50px;
   text-align: center;
}

#cat_logo span {
  display:block;
  font-weight:bold;
  position: relative;
  top: 8px;
/*  left: 0px; */
  
}

#info_overlay {
    display: none;
    background: #f0f0f0;
    padding: 20px;
    padding-bottom: 10px;
    z-index: 100;
    position: absolute;
    width: 70%;
    left: 20%;
    text-align: justify;
    top: 200px;
    border-top: 4px solid var(--color3);
    box-shadow: 0px 3px 2px 1px rgba(0,0,0,0.06)
}

#idp_logo {
   display:none;
   float:right;
   padding-right: 30px;
   max-height:150px;
   padding-top:10px;
}

#fed_logo {
   display:none;
   position:absolute;
   right:30px;
   max-height:150px;
   padding-bottom:10px;
   bottom: 50px;
}

#inst_extra_text {
   position: absolute;
   max-width: 30vw;
   width: auto;
   top: 0px;
   right: 20px;
   font-size: 16px;
   padding-top: 12px;
   color: yellow;
   padding-left:0px;
   text-align: right;
}
/* ... */

